--- a/main/templates/aws-mirovoy-ref-arch-01-newvpc.yaml
+++ b/main/templates/aws-mirovoy-ref-arch-01-newvpc.yaml
@@ -1,17 +1,16 @@
 ---
 AWSTemplateFormatVersion: 2010-09-09
 
-Description: 'Mirovoy Reference Architecture - Create a new VPC
+Description: 'Mirovoy Reference Architecture — VPC —
     This template creates three subnets in each of two availability
     zones, in accordance with the Mirovoy Reference Architecture. Each
     AZ will have two private subnets — one for applications and one for
-    data — and a public AZ. Each public AZ gets a NAT gateway, enabling
-    outbound traffic from the Application Private Subnets.'
+    data — and a public AZ.'
 
 Metadata:
 
   Authors:
-    Description: Chris Richardson (cwr@mirovoysales.com
+    Description: Chris Richardson (cwr@mirovoysales.com)
   License:
     Description: 'Copyright 2018 Mirovoy Sales, s.r.o.  and its
 	affiliates. All Rights Reserved.  This is a derivative work
@@ -28,19 +27,21 @@ Metadata:
   AWS::CloudFormation::Interface:
 
     ParameterGroups:
-    - Label:
-        default: Amazon VPC Parameters
-      Parameters:
-      - NumberOfAZs
-      - AvailabilityZones
-      - VpcCidr
-      - VpcTenancy
-      - PublicSubnet1Cidr
-      - PublicSubnet2Cidr
-      - AppSubnet1Cidr
-      - AppSubnet2Cidr
-      - DataSubnet1Cidr
-      - DataSubnet2Cidr
+      -
+        Label:
+          default: Amazon VPC Parameters
+        Parameters:
+          - NumberOfAZs
+          - AvailabilityZones
+          - VpcCidr
+          - VpcTenancy
+          - PublicSubnet1Cidr
+          - PublicSubnet2Cidr
+          - AppSubnet1Cidr
+          - AppSubnet2Cidr
+          - DataSubnet1Cidr
+          - DataSubnet2Cidr
+
     ParameterLabels:
       AvailabilityZones:
         default: Availability Zones
@@ -66,63 +67,70 @@ Metadata:
 Parameters:
 
   AvailabilityZones:
-    Description: 'List of Availability Zones to use for the subnets in the VPC. Note:
-      The logical order is preserved.'
+    Description: 'List of Availability Zones to use for the subnets in the VPC.
+      Note: The logical order is preserved.'
     Type: List<AWS::EC2::AvailabilityZone::Name>
   NumberOfAZs:
     AllowedValues:
-    - 1
-    - 2
+      - 1
+      - 2
     Default: 2
-    Description: Number of Availability Zones to use in the VPC. This must match your
-      selections in the list of Availability Zones parameter.
+    Description: Number of Availability Zones to use in the VPC. This must
+      match your selections in the list of Availability Zones parameter.
     Type: Number
   VpcCidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
     Default: 10.0.0.0/16
     Description: CIDR block for the VPC
     Type: String
   VpcTenancy:
     AllowedValues:
-    - default
-    - dedicated
+      - default
+      - dedicated
     Default: default
     Description: The allowed tenancy of instances launched into the VPC
     Type: String
   DataSubnet1Cidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
     Default: 10.0.100.0/24
     Description: CIDR block for data subnet 1 located in Availability Zone 1
     Type: String
   DataSubnet2Cidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
     Default: 10.0.101.0/24
     Description: CIDR block for data subnet 2 located in Availability Zone 2
     Type: String
   PublicSubnet1Cidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
     Default: 10.0.200.0/24
     Description: CIDR block for Public subnet 1 located in Availability Zone 1
     Type: String
   PublicSubnet2Cidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
     Default: 10.0.201.0/24
     Description: CIDR block for Public subnet 2 located in Availability Zone 2
     Type: String
   AppSubnet1Cidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
     Default: 10.0.4.0/22
     Description: CIDR block for App subnet 1 located in Availability Zone 1
     Type: String
   AppSubnet2Cidr:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
     Default: 10.0.8.0/22
     Description: CIDR block for App subnet 2 located in Availability Zone 2
     Type: String
@@ -130,9 +138,9 @@ Parameters:
 Conditions:
 
   NumberOfAZs1:
-      !Equals [ '1', !Ref NumberOfAZs ]
+    !Equals ['1', !Ref NumberOfAZs]
   NumberOfAZs2:
-      !Equals [ '2', !Ref NumberOfAZs ]
+    !Equals ['2', !Ref NumberOfAZs]
   AZ1: !Or
     - !Condition NumberOfAZs1
     - !Condition NumberOfAZs2
@@ -144,12 +152,12 @@ Resources:
     Condition: AZ1
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: !Select [ 0, !Ref AvailabilityZones ]
+      AvailabilityZone: !Select [0, !Ref AvailabilityZones]
       CidrBlock: !Ref AppSubnet1Cidr
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'AppSubnet1 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['AppSubnet1 / ', !Ref 'AWS::StackName']]
         - Key: SubnetType
           Value: Private
       VpcId: !Ref Vpc
@@ -157,12 +165,12 @@ Resources:
     Condition: AZ2
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: !Select [ 1, !Ref AvailabilityZones ]
+      AvailabilityZone: !Select [1, !Ref AvailabilityZones]
       CidrBlock: !Ref AppSubnet2Cidr
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'AppSubnet2 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['AppSubnet2 / ', !Ref 'AWS::StackName']]
         - Key: SubnetType
           Value: Private
       VpcId: !Ref Vpc
@@ -184,12 +192,12 @@ Resources:
     Condition: AZ1
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: !Select [ 0, !Ref AvailabilityZones ]
+      AvailabilityZone: !Select [0, !Ref AvailabilityZones]
       CidrBlock: !Ref DataSubnet1Cidr
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'DataSubnet1 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['DataSubnet1 / ', !Ref 'AWS::StackName']]
         - Key: SubnetType
           Value: Private
       VpcId: !Ref Vpc
@@ -197,12 +205,12 @@ Resources:
     Condition: AZ2
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: !Select [ 1, !Ref AvailabilityZones ]
+      AvailabilityZone: !Select [1, !Ref AvailabilityZones]
       CidrBlock: !Ref DataSubnet2Cidr
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'DataSubnet2 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['DataSubnet2 / ', !Ref 'AWS::StackName']]
         - Key: SubnetType
           Value: Private
       VpcId: !Ref Vpc
@@ -225,7 +233,7 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'InternetGateway / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['InternetGateway / ', !Ref 'AWS::StackName']]
   AttachInternetGateway:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
@@ -257,7 +265,7 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'NatRouteTable1 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['NatRouteTable1 / ', !Ref 'AWS::StackName']]
         - Key: Network
           Value: Public
       VpcId: !Ref Vpc
@@ -287,7 +295,7 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'NatRouteTable2 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['NatRouteTable2 / ', !Ref 'AWS::StackName']]
         - Key: Network
           Value: Public
       VpcId: !Ref Vpc
@@ -304,7 +312,7 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'PublicRouteTable / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['PublicRouteTable / ', !Ref 'AWS::StackName']]
         - Key: Network
           Value: Public
       VpcId: !Ref Vpc
@@ -325,12 +333,12 @@ Resources:
     Condition: AZ1
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: !Select [ 0, !Ref AvailabilityZones ]
+      AvailabilityZone: !Select [0, !Ref AvailabilityZones]
       CidrBlock: !Ref PublicSubnet1Cidr
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'PublicSubnet1 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['PublicSubnet1 / ', !Ref 'AWS::StackName']]
         - Key: SubnetType
           Value: Public
       VpcId: !Ref Vpc
@@ -338,12 +346,12 @@ Resources:
     Condition: AZ2
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: !Select [ 1, !Ref AvailabilityZones ]
+      AvailabilityZone: !Select [1, !Ref AvailabilityZones]
       CidrBlock: !Ref PublicSubnet2Cidr
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'PublicSubnet2 / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['PublicSubnet2 / ', !Ref 'AWS::StackName']]
         - Key: SubnetType
           Value: Public
       VpcId: !Ref Vpc
@@ -356,12 +364,12 @@ Resources:
       EnableDnsSupport: true
       Tags:
         - Key: Name
-          Value: !Join [ '', [ 'Vpc / ', !Ref 'AWS::StackName' ] ]
+          Value: !Join ['', ['Vpc / ', !Ref 'AWS::StackName']]
   VpcFlowLog:
     Type: AWS::EC2::FlowLog
     Properties:
       DeliverLogsPermissionArn: !GetAtt VpcFlowLogsRole.Arn
-      LogGroupName: !Join [ '', [ !Ref 'AWS::StackName', '-FlowLog' ] ]
+      LogGroupName: !Join ['', [!Ref 'AWS::StackName', '-FlowLog']]
       ResourceId: !Ref Vpc
       ResourceType: VPC
       TrafficType: ALL
@@ -395,7 +403,7 @@ Resources:
                 Resource: '*'
 
 Outputs:
-  
+
   Vpc:
     Value: !Ref Vpc
   VpcCidr:
@@ -420,23 +428,16 @@ Outputs:
     Value: !Ref DataSubnet2
   DataSubnet:
     Value:
-      !If
-        [ NumberOfAZs1,
-        !Ref DataSubnet1,
-          !Join [ ',', [ !Ref DataSubnet1, !Ref DataSubnet2 ] ]
-        ] 
+      !If [NumberOfAZs1, !Ref DataSubnet1,
+           !Join [',', [!Ref DataSubnet1, !Ref DataSubnet2]]
+      ]
   AppSubnet:
     Value:
-      !If
-        [ NumberOfAZs1,
-        !Ref AppSubnet1,
-          !Join [ ',', [ !Ref AppSubnet1, !Ref AppSubnet2 ] ]
-        ] 
+      !If [NumberOfAZs1, !Ref AppSubnet1,
+           !Join [',', [!Ref AppSubnet1, !Ref AppSubnet2]]
+      ]
   PublicSubnet:
     Value:
-      !If
-        [ NumberOfAZs1,
-        !Ref PublicSubnet1,
-          !Join [ ',', [ !Ref PublicSubnet1, !Ref PublicSubnet2 ] ]
-        ] 
-
+      !If [NumberOfAZs1, !Ref PublicSubnet1,
+           !Join [',', [!Ref PublicSubnet1, !Ref PublicSubnet2]]
+      ]
