--- a/main/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
+++ b/main/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
@@ -2,7 +2,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Description: 'Mirovoy Reference Architecture - Create Security Groups
-    This template creates the security groups to secure the Mirovoy Reference 
+    This template creates the security groups to secure the Mirovoy Reference
     Architecture.'
 
 Metadata:
@@ -24,15 +24,16 @@ Metadata:
 
   AWS::CloudFormation::Interface:
     ParameterGroups:
-    - Label:
-        default: AWS Parameters
-      Parameters:
-        - SshAccessCidr
-        - Vpc
-    - Label:
-        default: Optional security groups to create
-      Parameters:
-        - CreateMailSecGroup
+      - Label:
+          default: AWS Parameters
+        Parameters:
+          - SshAccessCidr
+          - Vpc
+      - Label:
+          default: Optional security groups to create
+        Parameters:
+          - CreateMailSecGroup
+
     ParameterLabels:
       SshAccessCidr:
         default: SSH Access From
@@ -41,29 +42,30 @@ Metadata:
       CreateMailSecGroup:
         default: Create a security group for mail servers
 
-Parameters:
-  
-  SshAccessCidr:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
-    Description: The CIDR IP range that is permitted to SSH to bastion instance. Note - a value of 0.0.0.0/0 will allow access from ANY IP address.
-    Type: String
-    Default: 0.0.0.0/0
-  Vpc:
-    AllowedPattern: ^(vpc-)([a-z0-9]{8}|[a-z0-9]{17})$
-    Description: The Vpc Id of an existing Vpc.
-    Type: AWS::EC2::VPC::Id
-  CreateMailSecGroup:
-    AllowedValues:
-      - 'True'
-      - 'False'
-    Default: 'True'
-    Description: Create a security group for use by mail servers
-    Type: String
+  Parameters:
+    SshAccessCidr:
+      AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,3}'
+      Description: The CIDR IP range that is permitted to SSH to bastion
+        instance. Note - a value of 0.0.0.0/0 will allow access from ANY IP
+        address.
+      Type: String
+      Default: 0.0.0.0/0
+    Vpc:
+      AllowedPattern: ^(vpc-)([a-z0-9]{8}|[a-z0-9]{17})$
+      Description: The Vpc Id of an existing Vpc.
+      Type: AWS::EC2::VPC::Id
+    CreateMailSecGroup:
+      AllowedValues:
+        - 'True'
+        - 'False'
+      Default: 'True'
+      Description: Create a security group for use by mail servers
+      Type: String
 
 Conditions:
 
-  WantsMail: !Equals [ 'True', !Ref CreateMailSecGroup ]
-  WantsNothing: !Not [ !Equals [ 'True', !Ref CreateMailSecGroup ] ]
+  WantsMail: !Equals ['True', !Ref CreateMailSecGroup]
+  WantsNothing: !Not [!Equals ['True', !Ref CreateMailSecGroup]]
 
 Resources:
 
@@ -115,12 +117,12 @@ Resources:
           FromPort: 22
           ToPort: 22
           SourceSecurityGroupId: !Ref BastionSecurityGroup
-#
-# port 25 for SMTP relay between servers
-# 587 for SMPT from clients (STARTLS)
-# 993 for IMAP
-# 995 for POP3
-#
+          #
+          # port 25 for SMTP relay between servers
+          # 587 for SMPT from clients (STARTLS)
+          # 993 for IMAP
+          # 995 for POP3
+          #
         - IpProtocol: tcp
           FromPort: 25
           ToPort: 25
@@ -145,22 +147,22 @@ Outputs:
     Description: Security group for jump/bastion servers
     Value: !Ref BastionSecurityGroup
     Export:
-      Name: !Join [ ":", [ !Ref "AWS::StackName", BastionSecurityGroup ] ]
+      Name: !Join [":", [!Ref "AWS::StackName", BastionSecurityGroup]]
   DatabaseSecurityGroupMail:
     Condition: WantsMail
     Description: Security group for RDS database access
     Value: !Ref DatabaseSecurityGroupMail
     Export:
-      Name: !Join [ ":", [ !Ref "AWS::StackName", DatabaseSecurityGroup ] ]
+      Name: !Join [":", [!Ref "AWS::StackName", DatabaseSecurityGroup]]
   DatabaseSecurityGroup:
     Condition: WantsNothing
     Description: Security group for RDS database access
     Value: !Ref DatabaseSecurityGroup
     Export:
-      Name: !Join [ ":", [ !Ref "AWS::StackName", DatabaseSecurityGroup ] ]
+      Name: !Join [":", [!Ref "AWS::StackName", DatabaseSecurityGroup]]
   MailSecurityGroup:
     Condition: WantsMail
     Description: Security group for MX servers
     Value: !Ref MailSecurityGroup
     Export:
-      Name: !Join [ ":", [ !Ref "AWS::StackName", MailSecurityGroup ] ]
+      Name: !Join [":", [!Ref "AWS::StackName", MailSecurityGroup]]
